# PathFinder-Self-Driving-Autonomous-Modular-Robot

./: README.md
pathfinder_anscer/: CMakeLists.txt  package.xml
pathfinder_anscer/config/: demo_setup.sql  init_db.sql  wormholes.db
pathfinder_anscer/demo/: README.md  send_demo_goals.sh  start_demo.sh
pathfinder_anscer/include/pathfinder_anscer/: multi_map_navigator.hpp  wormhole_manager.hpp
pathfinder_anscer/launch/: multi_map_nav.launch.py
pathfinder_anscer/src/: multi_map_navigator.cpp  multi_map_navigator_node.cpp  wormhole_manager.cpp
pathfinder_bringup/: package.xml
pathfinder_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
pathfinder_controller/: CMakeLists.txt  package.xml
pathfinder_controller/config/: pathfinder_controllers.yaml
pathfinder_controller/launch/: controller.launch.py  joystick_teleop.launch.py
pathfinder_controller/src/: noisy_controller.cpp  simple_controller.cpp  twist_relay.cpp
pathfinder_description/: package.xml
pathfinder_description/models/aws_robomaker_residential_AirconditionerB_01/: model.sdf
pathfinder_description/models/aws_robomaker_residential_Carpet_01/: model.sdf
pathfinder_description/models/aws_robomaker_residential_DeskPortraitA_01/meshes/: aws_DeskPortraitA_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitA_02/meshes/: aws_DeskPortraitA_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitB_01/meshes/: aws_DeskPortraitB_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitB_02/meshes/: aws_DeskPortraitB_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitC_02/meshes/: aws_DeskPortraitC_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitD_01/meshes/: aws_DeskPortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitD_02/meshes/: aws_DeskPortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitD_03/meshes/: aws_DeskPortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_DeskPortraitD_04/meshes/: aws_DeskPortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_FloorB_01/: model.sdf
pathfinder_description/models/aws_robomaker_residential_PortraitA_01/meshes/: aws_PortraitA_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitA_02/meshes/: aws_PortraitA_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitB_01/meshes/: aws_PortraitB_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitB_02/meshes/: aws_PortraitB_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitB_03/meshes/: aws_PortraitB_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitC_01/meshes/: aws_PortraitC_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitD_01/meshes/: aws_PortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitD_02/meshes/: aws_PortraitD_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitE_01/meshes/: aws_PortraitE_01_visual.DAE
pathfinder_description/models/aws_robomaker_residential_PortraitE_02/meshes/: aws_PortraitE_01_visual.DAE
pathfinder_description/urdf/: pathfinder.urdf.xacro  pathfinder_ros2_control.xacro
pathfinder_description/worlds/: small_house.world
pathfinder_firmware/: CMakeLists.txt  package.xml  pathfinder_interface.xml
pathfinder_firmware/firmware/robot_control/: robot_control.ino
pathfinder_firmware/include/pathfinder_firmware/: pathfinder_interface.hpp
pathfinder_firmware/launch/: hardware_interface.launch.py
pathfinder_firmware/src/: pathfinder_interface.cpp
pathfinder_localization/: CMakeLists.txt  package.xml
pathfinder_localization/launch/: local_localization.launch.py
pathfinder_localization/src/: kalman_filter.cpp  odometry_motion_model.cpp
pathfinder_mapping/: CMakeLists.txt  package.xml
pathfinder_mapping/include/pathfinder_mapping/: mapping_with_known_poses.hpp
pathfinder_mapping/src/: mapping_with_known_poses.cpp
pathfinder_motion/: package.xml
pathfinder_msgs/: package.xml
pathfinder_navigation/: package.xml
pathfinder_navigation/config/: bt_navigator.yaml  controller_server.yaml  planner_server.yaml
pathfinder_navigation/launch/: navigation.launch.py
pathfinder_planning/: package.xml
pathfinder_utils/: CMakeLists.txt  package.xml
