<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pathfinder_bringup</name>
  <version>0.0.0</version>

  <exec_depend>pathfinder_firmware</exec_depend>
  <exec_depend>pathfinder_controller</exec_depend>
  <exec_depend>pathfinder_description</exec_depend>
  <exec_depend>pathfinder_localization</exec_depend>
  <exec_depend>pathfinder_mapping</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <description>pathfinder Bringup package</description>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
